# altastata-console

./: Dockerfile  NOTICE  README.md  docker-compose.yml
.github/workflows/: frontend-ci.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/altastata_console/: grpc_gateway.py  main.py  models.py
backend/src/altastata_console/api/: account.py  files.py  preview.py  versions.py
backend/tests/: test_health.py
docs/: architecture.md
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: accountFolder.test.ts  accountFolder.ts  altastata.test.ts  altastata.ts
frontend/src/api/altastata/: accounts.ts  auth.ts  events.ts  files.ts  index.ts  paths.ts  proto.ts  session.ts  transport.ts
frontend/src/components/: BottomToolbar.tsx  CreateAccountDialog.tsx  FileColumn.tsx  MillerColumns.tsx  PreviewPane.tsx
frontend/src/components/BottomToolbar/: AccessDialog.tsx  NewFolderDialog.tsx  constants.ts  downloadPipeline.ts  formatBytes.ts  index.tsx  types.ts  uploadHelpers.ts
frontend/src/config/: runtimeSettings.ts
frontend/src/theme/: index.ts
frontend/src/types/: index.ts
nginx/: default.conf
scripts/: install-git-hooks.sh  prevent-secrets-commit.sh
